--- a/EasySplit/package.json
+++ b/EasySplit/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "^0.71.8",
     "react-native-google-fonts": "^0.0.0"
   },
   "devDependencies": {
