--- a/EasySplit/package.json
+++ b/EasySplit/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-collapsible": "^1.6.1",
     "react-native-google-fonts": "^0.0.0"
   },
   "devDependencies": {
